--- a/mission.html
+++ b/mission.html
@@ -47,39 +47,49 @@
     <br>
 
     <div class="img-container">
-      <img src="images/Tree-Felling.jpg">
+      <img src="images/missionReadyHQ.jpg">
     </div>
 
-    <h3>Health & Safety App</h3>
+    <h2>Mission Ready HQ</h2>
+    <h4>Software Developer Training with Advanced Technologies</h4>
 
-    <p>This was a project I started back in September 2018 when I did Enspiral Dev Academy. This project was for our
-      final project of the Web Development bootcamp.
+    <p>Using popular Cloud services such as Azure, AWS, iBM
+      Cloud
+      <br>
+      <br>
+      Build AI-powered applications using cloud-based artificial
+      intelligence services
+      <br>
+      <br>
+      Use a cloud-based source control such as Github or Azure DevOps to collaborate with development team.
+      <br>
+      <br>
+      Contribute to agile practices by providing time estimates of your work, participating in sprint planning, daily
+      standups, show and tells and retrospectives.
+      <br>
+      <br>
+      Deploy application using a DevOps automated deployment pipeline
+      <br>
+      <br>
+      Apply design thinking when creating applications. Apply industry best practices to unit testing an
+      application
+      <br>
+      <br>
+      Develop applications using one or more programming
+      languages, such as HTML, CSS, Javascript, C#
+      <br>
+      <br>
 
-      <br>
-      <br>
-      The application basically did all the Health and Safety Management systems automatically. For example, take in
-      Hazard ID, Safety meetings, Near miss and accident register.
-      <br>
-      <br>
-      When our team presented this at the final night at Enspiral Dev Academy, I was approached by a Senior Developer to
-      join them at Flux Federations Hack Day,
-      where I got to experience this project in developement in a professional setting. I also got to experience being a
-      product owner.
-      <br>
-      <br>
-      This application is currently on hold.
-      <br>
-      <br>
 
     </p>
 
     <h5>Technologies:</h5>
     <ul>
-      <li>- HTML CSS</li>
-      <li>- Node JS</li>
-      <li>- React JS</li>
-      <li>- Redux JS</li>
-      <li>- Bulmar </li>
+      <li>- Cloud Services</li>
+      <li>- Cloud-based artificial intelligence services</li>
+      <li>- Cloud-based source control</li>
+      <li>- DevOps automated deployment pipeline</li>
+      <li>- HTML, CSS, Javascript, C#</li>
       <li>- Knexfile JS</li>
     </ul>
 
