--- a/tolagaBayInn.html
+++ b/tolagaBayInn.html
@@ -64,7 +64,7 @@
       <br>
       <br>
       The cool thing about this experience, was that I got to code up the business portfolio section and made it data
-      driven.
+      driven. Experienced working with Firebase on the backend and Google Analytics.
       I also got to experience working within a team under a Senior.
       <br>
       <br>
