--- a/unity.html
+++ b/unity.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Health & Safety App</title>
+  <title>Unity - Game Dev</title>
 
 
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
@@ -47,27 +47,21 @@
     <br>
 
     <div class="img-container">
-      <img src="images/Tree-Felling.jpg">
+      <img src="images/laserDefender.png">
     </div>
 
-    <h3>Health & Safety App</h3>
+    <h3>Unity - Game Development</h3>
 
-    <p>This was a project I started back in September 2018 when I did Enspiral Dev Academy. This project was for our
-      final project of the Web Development bootcamp.
+    <p>This was a project I started back in September 2020. I made this game to learn Object Oriented Programming.
 
       <br>
       <br>
-      The application basically did all the Health and Safety Management systems automatically. For example, take in
-      Hazard ID, Safety meetings, Near miss and accident register.
+      I found game development really interesting in terms of coding the game play.
+      I realised early that there is a lot more happening behind the scenes.
       <br>
+
       <br>
-      When our team presented this at the final night at Enspiral Dev Academy, I was approached by a Senior Developer to
-      join them at Flux Federations Hack Day,
-      where I got to experience this project in developement in a professional setting. I also got to experience being a
-      product owner.
-      <br>
-      <br>
-      This application is currently on hold.
+      Just like my learning, this game is still under development.
       <br>
       <br>
 
@@ -75,12 +69,10 @@
 
     <h5>Technologies:</h5>
     <ul>
-      <li>- HTML CSS</li>
-      <li>- Node JS</li>
-      <li>- React JS</li>
-      <li>- Redux JS</li>
-      <li>- Bulmar </li>
-      <li>- Knexfile JS</li>
+      <li>- Unity hub</li>
+      <li>- Unity editor</li>
+      <li>- Visual Studio editor</li>
+      <li>- C#</li>
     </ul>
 
 
